<resources>
    <string name="app_name">LEX_Calculator</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="log">log</string>
    <string name="in">In</string>
    <string name="x">x^</string>
    <string name="root">√</string>
    <string name="factorial">!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="empty">empty</string>
    <string name="space" />
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="add">+</string>
    <string name="_4">4</string>
    <string name="del">DEL</string>
    <string name="empty1" />
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="Clear">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="multiply">*</string>

    <string name="period">.</string>
    <string name="divide">/</string>

    <string name="_0_0">0.0</string>
</resources>
