<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/input"
        android:background="#ffffff"
        android:gravity="center|end"
        android:hint="@string/_0"
        android:maxLength="15"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/sign"
        android:background="#ffffff"
        android:gravity="center|end"
        android:maxLength="10"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#666666"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/button_log"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#666666"
            android:gravity="center"
            android:onClick="logs"
            android:text="@string/log"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_In"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="In"
            android:text="@string/in"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_power"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="xn"
            android:text="@string/x"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_root"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="root"
            android:text="@string/root"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_exclamation"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="exe"
            android:text="@string/factorial"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#666666"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/button_Sin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="sine"
            android:text="@string/sin"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_Cos"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="cosine"
            android:text="@string/cos"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9_tan"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tan"
            android:text="@string/tan"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/empty1"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/space"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">


        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="seven"
            android:text="@string/_7"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="eight"
            android:text="@string/_8"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="nine"
            android:text="@string/_9"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_Add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#666666"
            android:onClick="add"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_Del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#666666"
            android:onClick="DELETE"
            android:text="@string/del"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">


        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="four"
            android:text="@string/_4"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="five"
            android:text="@string/_5"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="six"
            android:text="@string/_6"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_Subtract"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#666666"
            android:onClick="subtract"
            android:text="@string/subtract"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_Clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#666666"
            android:onClick="C"
            android:text="@string/Clear"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/button1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:onClick="one"
                    android:text="@string/_1"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:onClick="two"
                    android:text="@string/_2"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:onClick="three"
                    android:text="@string/_3"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_multiply"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#666666"
                    android:onClick="multiply"
                    android:text="@string/multiply"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/view"
                    android:background="#ffffff">


                </View>

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:onClick="zero"
                    android:text="@string/_0_0"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_Period"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:onClick="period"
                    android:text="@string/period"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_divide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#666666"
                    android:onClick="divide"
                    android:text="@string/divide"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />


            </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#666666"
                android:onClick="equal"
                android:text="@string/equals"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="36sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>